--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <!--  Top  -->
     
 <!--JavaScript-->
-<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/typed.js"></script>
 <script src="js/jquery.particleground.min.js"></script>
 <script src="js/materialize.min.js"></script>
