--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
             <article>
                <div class="service-include">
                     <i class="fas fa-palette"></i>
-                    <h4>Graphics design</h4>
+                    <h4>Fine Art Photography</h4>
                     <div class="line"></div>
-                    <p>There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                    <p>Fine art photography is my canvas for expression. Through creative compositions, unique perspectives, and a blend of visual elements, I aim to create images that transcend the ordinary. It's about turning photography into an art form, one frame at a time.</p>
                 </div>    
             </article>
             <article>
