--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="services section scrollspy" id="services">
             <article>
                <div class="service-include">
-                    <i class="fas fa-chart-line"></i>
+                    <i class="fa-solid fa-image-polaroid-user"></i>
                     <h4>Portrait Photography</h4>
                     <div class="line"></div>
                     <p>My approach to portrait photography isn't just about snapping pictures. It's about unraveling stories, discovering the unique narratives that make each person extraordinary. I don't want to just capture faces; I want to capture the essence of who you are.</p>
@@ -79,7 +79,7 @@
             </article>
             <article>
                <div class="service-include">
-                    <i class="fas fa-file-alt"></i>
+                    <i class="fa-solid fa-calendar-days"></i>
                     <h4>Event Photography</h4>
                     <div class="line"></div>
                     <p>Your go-to guy for capturing the energy, excitement, and pure magic of your special moments. Event photography is not just a job for me; it's an opportunity to tell your unique story through my lens.</p>
@@ -87,7 +87,7 @@
             </article>
             <article>
                <div class="service-include">
-                    <i class="far fa-edit"></i>
+                    <i class="fa-solid fa-boxes-stacked"></i>
                     <h4>Commercial photography</h4>
                     <div class="line"></div>
                     <p>if you're searching for a photographer who doesn't just take pictures but crafts visual stories to elevate your brand, you've found your match. Commercial photography isn't just about products; it's about creating a visual language that speaks to your audience</p>
@@ -95,7 +95,7 @@
             </article>
             <article>
                <div class="service-include">
-                    <i class="fas fa-cloud-upload-alt"></i>
+                    <i class="fa-solid fa-tree"></i>
                     <h4>Nature and Landscape Photography</h4>
                     <div class="line"></div>
                     <p>Nature and landscape photography aren't just about pretty pictures; they're about capturing the raw beauty of our planet and preserving it in every frame.</p>
@@ -103,7 +103,7 @@
             </article>
             <article>
                <div class="service-include">
-                    <i class="fas fa-palette"></i>
+                    <i class="fa-solid fa-palette"></i>
                     <h4>Fine Art Photography</h4>
                     <div class="line"></div>
                     <p>Fine art photography is my canvas for expression. Through creative compositions, unique perspectives, and a blend of visual elements, I aim to create images that transcend the ordinary. It's about turning photography into an art form, one frame at a time.</p>
@@ -111,7 +111,7 @@
             </article>
             <article>
                <div class="service-include">
-                    <i class="fas fa-mobile"></i>
+                    <i class="fa-solid fa-user-tie"></i>
                     <h4>Specialized Photography</h4>
                     <div class="line"></div>
                     <p>I'm bringing a touch of uniqueness to my lens. Specialized photography is where I get to explore unconventional narratives, capturing moments that fall outside the usual categories</p>
