--- a/index.html
+++ b/index.html
@@ -149,15 +149,15 @@
     <section class="background">
         <div class="works-wrapper">
            <div class="works-title">
-               <h5>Our <span>Works </span></h5>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id rerum ab, impedit aut, doloremque odio.</p>
+               <h5>My <span>Works </span></h5>
+               <p>Get ready to dive into a visual journey where passion meets the click of a shutter. Join me in exploring the magic woven into every photograph. 📸✨</p>
            </div>
            <div class="buttons-wrapper">
                <button data-filter="*" class="active">All</button>
-               <button data-filter=".wordpress">WordPress</button>
-               <button data-filter=".websites">Websites</button>
-               <button data-filter=".work">Work</button>
-               <button data-filter=".ceo">CEO</button>
+               <button data-filter=".wordpress">Products</button>
+               <button data-filter=".websites">Nature</button>
+               <button data-filter=".work">Art</button>
+               <button data-filter=".ceo">Portraits</button>
                
            </div><!--button-wrapper-->
           
