--- a/index.html
+++ b/index.html
@@ -154,31 +154,46 @@
            </div>
            <div class="buttons-wrapper">
                <button data-filter="*" class="active">All</button>
-               <button data-filter=".wordpress">Products</button>
-               <button data-filter=".websites">Nature</button>
-               <button data-filter=".work">Art</button>
-               <button data-filter=".ceo">Portraits</button>
+               <button data-filter=".products">Products</button>
+               <button data-filter=".nature">Nature</button>
+               <button data-filter=".art">Art</button>
+               <button data-filter=".portraits">Portraits</button>
                
            </div><!--button-wrapper-->
           
             <div class="grid section scrollspy" id="works">
-                <div class="grid-item websites wordpress">
+                <div class="grid-item products">
                     <img class="materialboxed responsive-img" src="images/1.jpg" alt="">
                 </div>
-                <div class="grid-item ceo websites">
+                <div class="grid-item products">
                     <img class="materialboxed responsive-img" src="images/2.jpg" alt="">
                 </div>
-                <div class="grid-item ceo wordpress websites work">
+                <div class="grid-item products">
                     <img class="materialboxed responsive-img" src="images/3.jpg" alt="">  
                 </div>
-                <div class="grid-item ceo wordpress websites">
+                <div class="grid-item products">
                     <img class="materialboxed responsive-img" src="images/4.jpg" alt="">
                 </div>
-                <div class="grid-item name">
+                <div class="grid-item products">
                     <img class="materialboxed responsive-img" src="images/5.jpg" alt="">
                 </div>
-                <div class="grid-item name">
-                    <img class="materialboxed responsive-img" src="images/5.jpg" alt="">
+                <div class="grid-item nature">
+                    <img class="materialboxed responsive-img" src="images/13.jpg" alt="">
+                </div>
+                <div class="grid-item nature">
+                    <img class="materialboxed responsive-img" src="images/14.jpg" alt="">
+                </div>
+                <div class="grid-item art">
+                    <img class="materialboxed responsive-img" src="images/15.jpg" alt="">
+                </div>
+                <div class="grid-item portraits">
+                    <img class="materialboxed responsive-img" src="images/16.jpg" alt="">
+                </div>
+                <div class="grid-item portraits">
+                    <img class="materialboxed responsive-img" src="images/17.jpg" alt="">
+                </div>
+                <div class="grid-item portraits">
+                    <img class="materialboxed responsive-img" src="images/18.jpg" alt="">
                 </div>
             </div><!--grid-->
             </div><!--test-->
