--- a/index.html
+++ b/index.html
@@ -209,18 +209,18 @@
             <div class="contacts-icons row center">
                <article class="col m4 s12">
                     <i class="fas fa-mobile"></i>
-                    <p>Call Us On</p>
-                    <a href="tel:123-456-7890">123-456-7890</a>
+                    <p>Call Me On</p>
+                    <a href="tel:3800631882467">+380 (063) 188 24 67</a>
                </article>
                <article class="col m4 s12">
                     <i class="fas fa-envelope"></i>
-                    <p>Call Us On</p>
-                    <a href="tel:123-456-7890">123-456-7890</a>
+                    <p>Mail Me On</p>
+                    <p>shulgandmytro@gmail.com</p>
                </article>
                <article class="col m4 s12">
                    <i class="fas fa-map-marker-alt"></i>
                     <p>Call Us On</p>
-                    <a href="tel:123-456-7890">123-456-7890</a>
+                    <a href="tel:123-456-7890">Kyiv, 8 Bandera Ave. Pochayna</a>
                </article>
             </div><!--contacts-icons-->
             <div class="contact">
