--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 
     <section class="contacts-wrapper container">
         <div class="contacts-title center">
-            <h6><span>Contact</span> Us</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id rerum ab, impedit aut, doloremque odio.</p>
+            <h6><span>Contact</span> Me</h6>
+            <p>Connect with Dmytro Shulgan Photography. Let's Capture Your Story Together!</p>
         </div>
         <div class="contacts-includes">
             <div class="contacts-icons row center">
@@ -219,7 +219,7 @@
                </article>
                <article class="col m4 s12">
                    <i class="fas fa-map-marker-alt"></i>
-                    <p>Call Us On</p>
+                    <p>Find Me On</p>
                     <a href="tel:123-456-7890">Kyiv, 8 Bandera Ave. Pochayna</a>
                </article>
             </div><!--contacts-icons-->
