--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="services section scrollspy" id="services">
             <article>
                <div class="service-include">
-                    <i class="fa-solid fa-image-polaroid-user"></i>
+                    <i class="fa-solid fa-image-portrait"></i>
                     <h4>Portrait Photography</h4>
                     <div class="line"></div>
                     <p>My approach to portrait photography isn't just about snapping pictures. It's about unraveling stories, discovering the unique narratives that make each person extraordinary. I don't want to just capture faces; I want to capture the essence of who you are.</p>
