--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="photo-text">
                 <h2>welcome</h2>
                 <h1>I'm <span class="animate"></span></h1>
-                <p>It is a long established fact that a reader will be of a page when established fact looking at its layout.</p>
+                <p>Greetings! I'm Dmytro Shulgan. Join me on a visual journey where moments transform into timeless narratives. Whether it's your special occasions, the beauty of nature, or unique tales, let's capture your story together.</p>
                 <a href="#">Download Cv</a>
             </div>
         </div>
