--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap&subset=cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Favicon -->
+    <link type="Image/x-icon" href="images/weblogogo.png" rel="icon">
 </head>
 <body style="overflow: visible;">
    <section id="preloader"></section>
