--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap&subset=cyrillic-ext,latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <!-- Favicon -->
-    <link type="Image/x-icon" href="images/weblogogo.png" rel="icon">
+    <link type="Image/x-icon" href="images/weblogo.png" rel="icon">
 </head>
 <body style="overflow: visible;">
    <section id="preloader"></section>
